<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="ok">OK</string>
    <string name="noodles_ready">Noodles is ready, enjoy!</string>
    <string name="hello">Hello World</string>
    <string name="app_name">NoodlesMaster</string>
    <string name="adjust_timer">Adjust Total Time</string>
    <string name="selected">You selected: </string>
    <string name="description">description</string>
    <string name="noselection">No item selected</string>
    <string name="list_item">List Item</string>
    <string name="menu_browse">Browse Noodles</string>
    <string name="menu_scan">Scan Barcode</string>
    <string name="no">No</string>
    <string name="install_barcode_scanner_message">This application requires Barcode Scanner. Would you like to install it?</string>
    <string name="yes">Yes</string>
    <string name="install_barcode_scanner_title">Install Barcode Scanner</string>
    <string name="noodles_not_found">Noodles not found</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="evis_studio">Evis Studio</string>
    <string name="menu_sync">Sync Data</string>
    <string name="menu_addWidget1">Add 3:00 Widget</string>
    <string name="menu_addWidget2">Add 3:30 Widget</string>
    <string name="menu_addWidget3">Add 4:00 Widget</string>
    <string name="menu_addWidget4">Add 4:30 Widget</string>
    <string name="menu_addWidget5">Add 5:00 Widget</string>
    <string name="menu_more">More</string>
    <string name="menu_buy">Buy Noodels</string>
    <string name="menu_preference">Settings</string>
    <string name="menu_about">About</string>
    <string name="pref_cat_notification">Notification</string>
    <string name="pref_ringtone_desc">Change the ringtone of the notification</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="pref_vibration_desc_on">Vibration is on</string>
    <string name="pref_vibration_desc_off">Vibration is off</string>
    <string name="pref_vibration">Vibration</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_about">About NoodlesMaster</string>
    <string name="start_3_00">3:00\n3 Mins</string>
    <string name="start_3_30">3:30\n3.5 Mins</string>
    <string name="start_4_00">4:00\n4 Mins</string>
    <string name="start_4_30">4:30\n4.5 Mins</string>
    <string name="start_5_00">5:00\n5 Mins</string>
    <string name="start_custom">[ ? ]\nCustom</string>
    <string name="notification_timer_complete_title">Noodles Ready</string>
    <string name="notification_timer_complete_text">Your instant noodles is ready, enjoy.</string>
    <string name="widget1_receiver_label">NoodlesMaster 3:00 Shortcut</string>
    <string name="widget2_receiver_label">NoodlesMaster 3:30 Shortcut</string>
    <string name="widget3_receiver_label">NoodlesMaster 4:00 Shortcut</string>
    <string name="widget4_receiver_label">NoodlesMaster 4:30 Shortcut</string>
    <string name="widget5_receiver_label">NoodlesMaster 5:00 Shortcut</string>
    <string name="widget1_label">3:00</string>
    <string name="widget2_label">3:30</string>
    <string name="widget3_label">4:00</string>
    <string name="widget4_label">4:30</string>
    <string name="widget5_label">5:00</string>
    <string name="about_title">About NoodlesMaster</string>
    <string name="about_version_label">Version: </string>
    <string name="about_paragraph1">NoodlesMaster (i.e. Instant Noodles Master) is a small tool for instant noodles funs. \n\nAs well known, instant noodles can be cooked as follows: </string>
    <string name="about_step1_desc">Prepare raw noodles in the bowl.</string>
    <string name="about_step2_desc">Fill with boiling water carefully.</string>
    <string name="about_step3_desc">Cover the lid, start the timer.</string>
    <string name="about_step4_desc">Noodles is well cooked, enjoy!</string>
    <string name="about_paragraph2">The new version of NoodlesMaster focuses on the timer feature for instant noodles, aims to be your best mate when cooking instant noodles. \n\nA user may tap any button at the bottom of the main interface to kick off the timer, NoodlesMaster will notify user when timer completes. During timer runs, user may tap the stop button in the center of the top ring to cancel the timer. User may also add shortcut widgets onto home screen, which can start the timer by only one tap.</string>
    <string name="about_official_website">Official Website: http://n.evis.me</string>
    <string name="about_official_weibo">Follow: weibo.com/noodlesmaster</string>
    <string name="timer_already_running">Timer is already running, stop to start another.</string>
    <string name="scan_prompt_message">Please scan the barcode on product.</string>
    <string name="time_days"> %1$s days</string>
    <string name="time_hours"> %1$s hours</string>
    <string name="time_minutes"> %1$s minutes</string>
    <string name="time_seconds"> %1$s seconds</string>
    <string name="error_no_network">No network available</string>
    
    <!-- Share -->
    <string name="weibosdk_cancel_download_weibo">Cancelled downloading Weibo.</string>
    <string name="weibosdk_toast_share_success">Share success</string>
    <string name="weibosdk_toast_share_failed">Share failed</string>
    <string name="weibosdk_toast_share_canceled">Share cancelled</string>
    <string name="weibosdk_not_support_api_hint">Weibo app not installed or is not official version</string>
    <string name="share_weibo_content">Share content, %1$s, %2$s</string>
    
    <!-- App Configurations -->
    <string name="amazon_associate_tag">evisme-test-20</string>
    <string name="amazon_aws_endpoint">webservices.amazon.com</string>
    <string name="amazon_aws_access_key_id">AKIAJ4C56ZJALOHN4G3Q</string>
    <string name="amazon_aws_secret_key">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</string>
    
    <!-- App Dist Channels -->
    <string name="app_dist_channel">me.evis.mobile.noodle.channel</string>
    <string name="app_dist_channel0">evisme</string>
    <string name="app_dist_channel1">googleplay</string>
    <string name="app_dist_channel2">hiapk</string>
    <string name="app_dist_channel3">anzhi</string>
    <string name="app_dist_channel4">gfan</string>
    <string name="app_dist_channel5">wandoujia</string>
    <string name="app_dist_channel6">amazon</string>
    <string name="app_dist_channel7">yandex</string>
    <string name="app_dist_channel8">opera</string>
    <string name="app_dist_channel9">360</string>
    <string name="app_dist_channel10">baidu</string>
</resources>
