<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/TimerArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/TimerLabelArea"
        android:layout_weight="1"
        android:paddingTop="10dp" >

        <me.evis.mobile.noodle.widget.PieProgressBar
            android:id="@+id/TimerProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:max="1"
            android:progress="0" />

        <ImageButton
            android:id="@+id/StopTimerButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@drawable/stop_timer_btn"
            android:scaleType="centerInside"
            android:src="@drawable/av_pause"
            android:text="@string/stop" />

        <ImageView
            android:id="@+id/TimerCenterLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/timer_center_bg"
            android:scaleType="centerInside"
            android:src="@drawable/timer_center_icon1" />

        <ImageButton
            android:id="@+id/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/empty_btn_bg"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/action_settings" />
        
        <ImageButton
            android:id="@+id/ScanButton"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/empty_btn_bg"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/action_settings" />

        <ImageButton
            android:id="@+id/ShareButton"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/empty_btn_bg"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/action_settings" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/TimerLabelArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonsTable"
        android:layout_marginBottom="10dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/TimerCurrentHour"
            style="@style/TimerFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:typeface="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/Semicolon1"
            style="@style/TimerSeparatorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:typeface="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/TimerCurrentMinute"
            style="@style/TimerFontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

        <TextView
            android:id="@+id/Semicolon2"
            style="@style/TimerSeparatorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <TextView
            android:id="@+id/TimerCurrentSecond"
            style="@style/TimerFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

        <TextView
            android:id="@+id/Slash1 "
            style="@style/TimerSeparatorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="/" />

        <TextView
            android:id="@+id/TimerHour"
            style="@style/TimerFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:typeface="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/Semicolon3"
            style="@style/TimerSeparatorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:typeface="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/TimerMinute"
            style="@style/TimerFontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />

        <TextView
            android:id="@+id/Semicolon4"
            style="@style/TimerSeparatorFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <TextView
            android:id="@+id/TimerSecond"
            style="@style/TimerFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/ButtonsTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignWithParentIfMissing="true">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ToggleButton
                android:id="@+id/StartTimerButton01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle_holo_light"
                android:height="80dp"
                android:text="@string/start_3_00"
                android:textOff="@string/start_3_00"
                android:textOn="@string/start_3_00" />

            <ToggleButton
                android:id="@+id/StartTimerButton02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle_holo_light"
                android:height="80dp"
                android:text="@string/start_3_30"
                android:textOff="@string/start_3_30"
                android:textOn="@string/start_3_30" />

            <ToggleButton
                android:id="@+id/StartTimerButton03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle_holo_light"
                android:height="80dp"
                android:text="@string/start_4_00"
                android:textOff="@string/start_4_00"
                android:textOn="@string/start_4_00" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ToggleButton
                android:id="@+id/StartTimerButton04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle_holo_light"
                android:height="80dp"
                android:text="@string/start_4_30"
                android:textOff="@string/start_4_30"
                android:textOn="@string/start_4_30" />

            <ToggleButton
                android:id="@+id/StartTimerButton05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle_holo_light"
                android:height="80dp"
                android:text="@string/start_5_00"
                android:textOff="@string/start_5_00"
                android:textOn="@string/start_5_00" />

            <ToggleButton
                android:id="@+id/AdjustTimerButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle_holo_light"
                android:height="80dp"
                android:text="@string/start_custom"
                android:textOff="@string/start_custom"
                android:textOn="@string/start_custom" />

        </TableRow>
    </TableLayout>
    
	<com.google.ads.AdView android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		ads:adUnitId="a14d3e5dec9ea76"
		ads:adSize="BANNER"
		ads:testDevices="TEST_EMULATOR, motorola-me860-TA7440B9FQ" 
		ads:background="#FFFFFF" 
		ads:keywords="instant noodles 泡面 方便面 即食面 速食面"
        ads:primaryTextColor="#0088FF"
        ads:secondaryTextColor="#333333"/>
</RelativeLayout>